crates/solidity-v2/testing/snapshots/cst_output/from_v1/SourceUnit/UnicodeStringLiterals/single_trailing_ident/generated/0.8.30-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected Identifier. One of Ampersand, AmpersandAmpersand, AmpersandEqual, Asterisk, AsteriskAsterisk, AsteriskEqual, BangEqual, Bar, BarBar, BarEqual, Caret, CaretEqual, DoubleQuotedUnicodeStringLiteral, Equal, EqualEqual, GreaterThan, GreaterThanEqual, GreaterThanGreaterThan, GreaterThanGreaterThanEqual, GreaterThanGreaterThanGreaterThan, GreaterThanGreaterThanGreaterThanEqual, LessThan, LessThanEqual, LessThanLessThan, LessThanLessThanEqual, Minus, MinusEqual, MinusMinus, OpenBrace, OpenBracket, OpenParen, Percent, PercentEqual, Period, Plus, PlusEqual, PlusPlus, QuestionMark, Semicolon, SingleQuotedUnicodeStringLiteral, Slash, SlashEqual was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/from_v1/SourceUnit/UnicodeStringLiterals/single_trailing_ident/input.generated.sol:6:17]
   │
 6 │ unicode"emoji 😃"happy
   │                  ──┬──  
   │                    ╰──── Error occurred here.
───╯
